# ProgettoPCS2025

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  main.cpp  main_Anna.cpp  main_Manu.cpp  main_Marco.cpp
src/: BuildPolyhedra.cpp  BuildPolyhedra.hpp  CMakeLists.txt  Polyhedra.hpp  Sources.hpp  Utils.cpp  Utils.hpp
